@@ -30,12 +30,13 @@ typedef struct {
   unsigned char CRC;                         // 10
 } AUTOCAL_CFG;
 
-#if !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_pic14)
+#if !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_pic14) && !defined(__SDCC_sm83)
 __code AUTOCAL_CFG __at (0x8000) AutoCal_CFG = {0};
 #else
 /* The "__at (0x8000)" is suppressed on the hc08 to avoid */
 /* overlaying executable code. (hc08 regression test code */
-/* area begins at 0x8000) */
+/* area begins at 0x8000). On the GameBoy, address 0x8000 */
+/* is VRAM, not __code. */
 __code AUTOCAL_CFG AutoCal_CFG = {0};
 #endif
 
